# kerplace

./: .gitignore  Cargo.toml  INSTALL.md  README.md  SECURITY.md  WORKING_WITH_IT.md  build-static.sh  cluster-node.sh  kerplace-migrate.sh  kerplace.sh
.github/: FUNDING.yml
.github/workflows/: ci.yml  release.yml
bench/: .gitignore  run.sh
benches/: crypto.rs  erasure.rs  mlkem.rs
deploy/external-kms-laptop/: .gitignore  HARDENING.md  NEW_HOST_SETUP.md  README.md  USB_PRESENCE.md  adminKP.sh  adminkp.env.example  docker-compose.yml  gen-certs.sh  openBoo.sh  start.sh
deploy/external-kms-laptop/systemd/: kerplace-kms-tunnel.service  kerplace-kms-vault.service  kerplace-kms-vault.timer
deploy/external-kms-laptop/systemd-user/: kerplace-tunnel.service.example  kerplace-usb-watch.service
deploy/external-kms-laptop/usb-presence/: 99-kerplace-custody.rules.template  install.sh  kerplace-kms-presence  kerplace-kms-presence.service  kerplace-kms-seal  kerplace-kms-seal.service
deploy/external-kms-laptop/vault/config/: vault.hcl
docs/: ACCESS_CONTROL.md  CLUSTERING.md  DATA_PROTECTION_EXPLAINED.md  DISTRIBUTED_DESIGN.md  DYNAMIC_MEMBERSHIP_DESIGN.md  ENCRYPTION.md  ERASURE_CODING_DESIGN.md  GLOSSARY.md  KPC.md  LEGACY_ACCESS.md  MIGRATION.md  MULTI_GATEWAY_HA.md  OFFHOST_KMS_CUSTODY.md  PERFORMANCE.md  POST_QUANTUM.md  PRODUCTION_TAILSCALE.md  SECURITY_MODEL.md
kpc/: Cargo.toml  README.md  kpc.toml.example
kpc/src/: main.rs
src/: access_log.rs  audit.rs  config.rs  console_test.rs  error.rs  harden.rs  http_test.rs  iam.rs  lifecycle.rs  madmin.rs  main.rs  router.rs  state.rs  tls.rs
src/auth/: chunked.rs  mod.rs  oidc.rs  sigv4.rs
src/cluster/: lock.rs  mod.rs  mtls.rs  remote.rs  server.rs
src/console/: api.rs  auth.rs  mod.rs  oidc.rs
src/crypto/: mod.rs  provider.rs
src/erasure/: codec.rs  drive.rs  mod.rs  store.rs
src/handlers/: admin.rs  bucket.rs  mod.rs  multipart.rs  object.rs  sts.rs
src/s3/: mod.rs  xml.rs
src/storage/: fs.rs  mod.rs
web/: index.html
