[package]
name = "kpc"
version = "0.1.0"
edition = "2021"
description = "KerPlaceClient — custody admin CLI (status/seal/unseal/provision/mount) for KerPlace off-host KMS"
license = "Apache-2.0"

[[bin]]
name = "kpc"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
rpassword = "7"
anyhow = "1"

[profile.release]
strip = true
opt-level = "z"
lto = true
